--- a/src/app/components/Hero/Hero.module.css
+++ b/src/app/components/Hero/Hero.module.css
@@ -8,8 +8,7 @@
   width: 100vw;
 
   position: relative;
-  overflow: hidden;
-  background-color: red;
+  overflow: visible;
 }
 
 .title {
@@ -19,10 +18,13 @@
   font-weight: 800;
   text-transform: uppercase;
   overflow: hidden;
-  perspective: 1000px;
   z-index: 9;
   color: #fff;
   user-select: none;
+}
+
+.title * {
+  perspective: 300px;
 }
 
 .background {
@@ -51,6 +53,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.45);
   z-index: 1;
 }
