--- a/src/app/components/Header/Header.module.css
+++ b/src/app/components/Header/Header.module.css
@@ -1,22 +1,204 @@
-.container {
+.header {
+  position: fixed;
+  top: 0%;
   width: 100%;
-  height: 100px;
-  background-color: transparent;
-  padding: 1rem 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
+  background: transparent;
+  color: #fff;
   z-index: 10;
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  visibility: hidden;
+  transition: transform 0.3s ease;
 }
 
-.logo,
-.menu {
+.show {
+  transform: translateY(0);
+}
+
+.hide {
+  transition-delay: 0.2s;
+  transform: translateY(-100%);
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  margin: 0 auto;
+  width: 100%;
+}
+
+/*  .logo {
+    display: flex;
+    align-items: center;
+    position: relative;
+  }
+  .logoImg {
+    height: 80px;
+    width: 237px;
+  } */
+
+.logo h2 {
   color: #fff;
-  font-weight: 600;
+}
+
+.logo h2 span {
+  display: inline-block;
+
+  -webkit-transform: matrix(-1, 0, 0, 1, 0, 0);
+  -moz-transform: matrix(-1, 0, 0, 1, 0, 0);
+  -o-transform: matrix(-1, 0, 0, 1, 0, 0);
+  transform: matrix(-1, 0, 0, 1, 0, 0);
+}
+.nav {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.wrapper {
+  display: flex;
+}
+
+.navItem a {
+  color: white;
+  text-decoration: none;
+  font-size: 1rem;
+  padding: 5px 10px;
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 25%, rgba(18, 48, 174, 1) 55%, rgba(148, 72, 197, 1)) no-repeat right bottom / 0 100%;
+  transition: background-size 250ms;
+}
+.navItem a:where(:hover, :focus-visible) {
+  background-size: 100% 100%;
+  background-position-x: left;
+}
+.navItem a span {
+  mix-blend-mode: difference;
+}
+
+.submitButton {
+  background: #0070f3;
+  color: white;
+  border: none;
+  /* padding: 1rem 1.25rem; */
+  cursor: pointer;
+  transition: background 0.3s ease;
+  font-size: 1rem;
+  position: relative;
+}
+
+.submitButton p {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.submitButton .spans {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+}
+
+.submitButton:hover {
+  background: #005bb5;
+}
+
+.submitButton .spans span {
+  height: 10px;
+  width: 100%;
+
+  transition: background-size 250ms ease-out;
+}
+
+.submitButton .spans span:nth-child(even) {
+  background: linear-gradient(90deg, rgba(0, 0, 0, 1) 25%, rgba(18, 48, 174, 1) 55%, rgba(148, 72, 197, 1)) no-repeat right bottom / 0 100%;
+}
+.submitButton .spans span:nth-child(odd) {
+  background: linear-gradient(-90deg, rgba(0, 0, 0, 1) 25%, rgba(18, 48, 174, 1) 55%, rgba(148, 72, 197, 1)) no-repeat left bottom / 0 100%;
+}
+
+.submitButton:where(:hover, :focus-visible) .spans span:nth-child(even) {
+  background-size: 100% 100%;
+  background-position-x: left;
+}
+.submitButton:where(:hover, :focus-visible) .spans span:nth-child(odd) {
+  background-size: 100% 100%;
+  background-position-x: right;
+}
+
+.hamburger {
+  display: none;
+  flex-direction: column;
+  gap: 0.3rem;
+  cursor: pointer;
+}
+
+.hamburger span {
+  width: 25px;
+  height: 3px;
+  background: white;
+}
+
+@media (max-width: 768px) {
+  .nav {
+    position: absolute;
+
+    top: 100%;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: black;
+    opacity: 0;
+    transition: opacity 0.5s ease-out;
+    padding: 4rem 1rem 2rem;
+  }
+
+  .open .wrapper {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: stretch;
+    align-content: stretch;
+    position: relative;
+    height: 100%;
+    width: 100%;
+    gap: 1rem;
+  }
+
+  .submitButton {
+    display: none;
+  }
+  .logoImg {
+    width: 120px;
+    height: 40px;
+  }
+
+  .open {
+    opacity: 1;
+  }
+  .navItem {
+    overflow: hidden;
+    position: relative;
+    line-height: 100%;
+    height: 2.1rem;
+    width: 100%;
+    text-align: center;
+  }
+
+  .navItem a {
+    transform: translateY(100%);
+    transition: all 0.45s ease-out;
+    /* transition-delay: 0.2s; */
+    position: absolute;
+    font-size: 1.85rem;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+
+  .open .navItem a {
+    transform: translateY(0%);
+  }
+  .hamburger {
+    display: flex;
+  }
 }
