--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,17 +1,83 @@
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  background-color: #1a1a1a;
+  font-family: var(--font-nunito-sans), sans-serif;
+  color: var(--fntz-primary-text);
+  background-color: var(--fntz-white);
+
+  --fntz-blue-60: #0060df;
+  --fntz-blue-70: #003eaa;
+  --fntz-gray-20: #ededf0;
+  --fntz-light-gray: #f0f0f4;
+  --fntz-white: #ffffff;
+  --fntz-transition: all 0.15s cubic-bezier(0.07, 0.95, 0, 1);
+  --fntz-borders: 1px solid #ededf0;
+  --fntz-primary-text: #072434;
+  --fntz-secondary-text: #5e707b;
+  --fntz-font-size: 18px;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+h1,
+h2,
+h3 {
+  font-family: var(--font-tienne), serif;
+}
+
+p,
+span {
+  font-family: var(--font-nunito-sans), sans-serif;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+
+.container,
+.container-sm,
+.container-md,
+.container-lg,
+.container-xl,
+.container-xxl {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 16px;
+}
+
+@media (min-width: 576px) {
+  .container,
+  .container-sm {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  h1 {
+    font-size: 1.95rem;
+  }
+  .container,
+  .container-md {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 992px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+  .container,
+  .container-lg {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container,
+  .container-xl {
+    max-width: 1140px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .container,
+  .container-xxl {
+    max-width: 1320px;
+  }
 }
