--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,3 +2,9 @@
   position: relative;
   min-height: 100vh;
 }
+
+.first {
+  width: 100vw;
+  background-color: var(--fntz-dark-blue);
+  padding-bottom: 6rem;
+}
