--- a/src/app/Components/Hero/Hero.module.css
+++ b/src/app/Components/Hero/Hero.module.css
@@ -12,21 +12,68 @@
   position: relative;
   overflow: visible;
 }
+.inner {
+  height: 100%;
+  width: 100%;
 
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: stretch;
+  text-align: center;
+  z-index: 3;
+  gap: 2rem;
+}
+
+.rest {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: stretch;
+  text-align: center;
+  z-index: 3;
+  gap: 2rem;
+}
 .title {
   margin: 0;
-  font-size: 4vw;
+
+  overflow: hidden;
+  z-index: 9;
+  user-select: none;
+  perspective: 500px;
+}
+
+.text h1 {
+  font-size: 120px;
   line-height: 1;
   font-weight: 800;
   text-transform: uppercase;
-  overflow: hidden;
-  z-index: 9;
   color: #fff;
-  user-select: none;
 }
 
-.title * {
-  perspective: 500px;
+.title_framed {
+  display: inline-block;
+  background: #2998cf;
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1.5;
+  padding: 0 10px 15px 10px;
+  border: 10px solid #fff;
+  text-transform: uppercase;
+  z-index: 9;
+  transform: rotate(-4deg);
+}
+
+.description {
+  /* margin-top: 3rem; */
+  max-width: 35vw;
+  color: #fff;
+  font-size: 1.25rem;
 }
 
 .background {
@@ -37,6 +84,7 @@
   height: 100%;
   overflow: hidden;
   z-index: 1;
+  clip-path: inset(0% 0% 0% 0%);
 }
 
 .container video {
