--- a/src/app/Components/Hero/Hero.module.css
+++ b/src/app/Components/Hero/Hero.module.css
@@ -56,7 +56,7 @@
 
 .title_framed {
   display: inline-block;
-  background: #2998cf;
+  background: var(--fntz-blue-lite);
   color: #fff;
   font-weight: 700;
   line-height: 1.5;
@@ -70,8 +70,7 @@
 .description {
   /* margin-top: 3rem; */
   max-width: 35vw;
-  color: #fff;
-  font-size: 1.25rem;
+  color: var(--fntz-white);
 }
 
 .background {
@@ -103,4 +102,16 @@
   height: 100%;
   background: rgba(0, 0, 0, 0.1);
   z-index: 1;
+}
+
+@media (max-width: 767px) {
+  .description {
+    max-width: 100%;
+    padding: 0 2rem;
+  }
+
+  .inner {
+    justify-content: flex-start;
+    padding-top: 25%;
+  }
 }
