--- a/src/app/Components/Tours/Tours.module.css
+++ b/src/app/Components/Tours/Tours.module.css
@@ -5,7 +5,7 @@
   width: 100vw;
   position: relative;
   overflow: hidden;
-  background-color: #2998cf;
+  background-color: var(--fntz-blue-lite);
 }
 
 .scrollContent {
@@ -18,7 +18,6 @@
 .text {
   flex-shrink: 0;
   width: 60vw;
-  text-align: left;
   text-align: center;
 }
 
@@ -27,37 +26,15 @@
   text-transform: uppercase;
   line-height: 1;
 }
-/* .rotated {
-  background-color: var(--middle-brown);
-  outline-offset: 0px;
-  perspective: none;
-  perspective-origin: 0%;
-  transform-origin: 0%;
-  color: var(--milk);
-  border: 0 solid #000;
-  outline: 0.5vw solid #faeade;
-  justify-content: center;
-  align-items: center;
-  width: auto;
-  margin-top: 0;
-  margin-bottom: 2vw;
-  padding: 0;
-  display: flex;
-  position: relative;
-  top: auto;
-  overflow: hidden;
-  transform: rotate(-3deg);
-} */
 
 .rotated {
   display: inline-block;
   background: var(--fntz-white);
-  color: #2998cf !important;
-  /* color: #193064 !important; */
+  color: var(--fntz-blue-lite) !important;
   font-weight: 700;
   line-height: 1.5;
   padding: 0 10px 15px 10px;
-  border: 10px solid #2998cf;
+  border: 10px solid var(--fntz-blue-lite);
   text-transform: uppercase;
   transform: rotate(-4deg);
 }
@@ -75,6 +52,8 @@
   height: 35vw;
   position: relative;
   transform: rotate(-8deg);
+  overflow: hidden;
+  border-radius: 2rem;
 }
 
 .card:nth-child(2) {
@@ -82,13 +61,62 @@
 }
 
 .card h3 {
+  z-index: 5;
+  color: #fff;
+  letter-spacing: -0.1vw;
+  text-transform: uppercase;
+  margin-left: 0;
+  font-size: 3.1vw;
+  font-weight: 700;
+  line-height: 105%;
+  text-decoration: none;
   position: absolute;
-  bottom: 10%;
-  left: 10%;
-  z-index: 2;
-  color: var(--fntz-white);
+  inset: auto auto 2.3vw 2vw;
+  max-width: calc(100% - 4vw);
+  word-wrap: break-word;
 }
 
+/* Ensure Next.js Image stays as the background */
 .image {
   object-fit: cover;
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+}
+
+/* Small screen: Text above cards */
+@media (max-width: 767px) {
+  .container {
+    height: auto;
+    padding: 5vw 0;
+  }
+
+  .text {
+    width: 100%;
+    padding: 1rem;
+  }
+  .scrollContent {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    gap: 5vw;
+  }
+
+  .cards {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    gap: 4vw;
+    padding: 0 0 3rem;
+  }
+
+  .card {
+    width: 90vw;
+    height: 300px;
+    transform: none !important;
+    border-radius: 1rem;
+    margin: 3rem auto 0;
+  }
 }
