--- a/src/app/reset.css
+++ b/src/app/reset.css
@@ -1,38 +1,56 @@
-/* :root {
+/* reset.css */
+
+/* Box sizing reset */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-  }
-} */
-
+/* Full viewport, no horizontal scroll */
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
-}
-/* 
-body {
-} */
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  height: 100%;
+  /* overflow-x: hidden; */
+  font-family: sans-serif;
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
+/* Remove default link styles */
 a {
   color: inherit;
   text-decoration: none;
 }
 
+/* Image reset */
+img {
+  max-width: 100%;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+/* Optional: Remove default list styles */
+ul,
+ol {
+  list-style: none;
+}
+
+/* Optional: Inherit font styles in form elements */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+  border: none;
+  background: none;
+  outline: none;
+}
+
+/* Helper class for animated line reveals */
 .line {
   overflow: hidden;
   line-height: 1;
-}
-
-img {
-  vertical-align: middle;
-  max-width: 100%;
-  display: inline-block;
 }
