--- a/src/app/Components/Header/Header.module.css
+++ b/src/app/Components/Header/Header.module.css
@@ -1,12 +1,12 @@
 .header {
   position: fixed;
+  z-index: 99;
   top: 0;
   width: 100%;
   background: transparent;
-  color: #fff;
-  z-index: 10;
+  color: var(--color-black);
   transition: transform 0.3s ease;
-  padding: 1rem 0;
+  padding: 1rem 2rem;
 }
 
 .show {
@@ -25,10 +25,21 @@
   padding: 1rem 2rem;
   width: 100%;
   margin: 0 auto;
+
+  border-radius: 20px;
+  background-color: var(--color-white);
+  --tw-ring-offset-width: 0px;
+  --tw-ring-offset-color: #fff;
+  --tw-ring-color: rgba(59, 130, 246, 0.5);
+  --tw-ring-offset-shadow: 0 0 #0000;
+  --tw-ring-shadow: 0 0 #0000;
+  --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -4px rgba(0, 0, 0, 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .logo h2 {
-  color: #fff;
+  color: var(--color-black);
 }
 
 .logo h2 span {
@@ -40,16 +51,27 @@
   display: flex;
   align-items: center;
   gap: 1.5rem;
+  padding: 0.35rem 1rem 0rem;
+  color: var(--color-black);
+  font-size: 1rem;
+}
+
+.header.active .nav {
+  background-color: var(--color-black);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+.header.active .nav .navItem a {
+  color: var(--color-black);
 }
 
 .wrapper {
   display: flex;
+  justify-content: center;
+  gap: 1.5rem;
 }
 
 .navItem a {
-  color: var(--fntz-white);
   text-decoration: none;
-  font-size: 1rem;
   /* padding: 5px 10px; */
 }
 
@@ -63,10 +85,16 @@
 .hamburger span {
   width: 25px;
   height: 3px;
-  background: white;
+  background: var(--color-black);
 }
 
 @media (max-width: 768px) {
+  .header {
+    padding: 0;
+  }
+  .container {
+    border-radius: 0;
+  }
   .nav {
     position: absolute;
     top: 100%;
@@ -75,6 +103,7 @@
     height: 100vh;
     background: black;
     opacity: 0;
+    display: none; /* hidden by default */
     transition: opacity 0.5s ease-out;
     padding: 4rem 1rem 2rem;
   }
@@ -117,7 +146,8 @@
     display: flex;
   }
 
-  .submitButton {
+  .submitButton,
+  .contact {
     display: none;
   }
 }
