--- a/src/app/Components/Hero/Hero.module.css
+++ b/src/app/Components/Hero/Hero.module.css
@@ -9,19 +9,18 @@
 
   position: relative;
   overflow: visible;
-  background-color: var(--fntz-blue-lite);
+  background-color: var(--color-white);
 }
 
 /* The hero content container */
 .inner {
   height: 100%;
   width: 100%;
-
+  padding: 3rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+  justify-content: flex-end;
+  align-items: flex-start;
   z-index: 11;
   gap: 2rem;
   visibility: hidden;
@@ -32,9 +31,15 @@
 .rest {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  text-align: center;
+  align-items: flex-start;
   z-index: 3;
+  gap: 2rem;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   gap: 2rem;
 }
 
@@ -48,28 +53,14 @@
 }
 
 .text h1 {
-  line-height: 1;
-  font-weight: 800;
-  text-transform: uppercase;
+  line-height: 1.2;
   color: #fff;
-}
-
-.title_framed {
-  display: inline-block;
-  background: var(--fntz-blue-lite);
-  color: #fff;
-  font-weight: 700;
-  line-height: 1.5;
-  padding: 0 10px 15px 10px;
-  border: 10px solid #fff;
-  text-transform: uppercase;
-  z-index: 9;
-  transform: rotate(-4deg);
+  text-shadow: 2px 3px 5px rgba(0, 0, 0, 0.5);
 }
 
 .description {
   max-width: 35vw;
-  color: var(--fntz-white);
+  color: var(--color-white);
 }
 
 /* Background container with clip-path animation */
@@ -90,41 +81,25 @@
   height: 100% !important;
 }
 
-/* The <video> inside ReactPlayer */
-.theVideo {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  object-fit: cover;
-  transform: translate(-50%, -50%);
-}
-
 .background video {
   object-fit: cover;
 }
 
-/* The "Loading..." text, 
-   placed behind the background (z-index: 2) so the video
-   slides in above it.
-*/
 .loading {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
-  color: #fff;
+  color: #000;
 }
 
 /* @media rules for responsiveness */
 @media (max-width: 767px) {
+  .inner {
+    padding: 1rem 0rem 6rem 1rem;
+  }
   .description {
     max-width: 100%;
-    padding: 0 2rem;
-  }
-
-  .inner {
-    justify-content: flex-start;
-    padding-top: 25%;
   }
 }
