--- a/src/app/Components/VideoCard/VideoCard.module.css
+++ b/src/app/Components/VideoCard/VideoCard.module.css
@@ -69,3 +69,14 @@
   z-index: 1;
   cursor: grab;
 }
+
+.description {
+  color: var(--color-black);
+  text-align: center;
+  margin-top: 0.5rem;
+}
+
+.description p {
+  font-weight: 400;
+  font-size: 1rem;
+}
