--- a/src/app/Components/AboutUs/AboutUs.module.css
+++ b/src/app/Components/AboutUs/AboutUs.module.css
@@ -12,8 +12,9 @@
   align-items: center;
   align-content: stretch;
   height: 100%;
-  width: 100%;
+  width: 60%;
   padding: 0 6rem;
+  margin: 0 auto;
   text-align: center;
 }
 
@@ -26,5 +27,6 @@
   }
   .inner {
     padding: 0rem 3rem;
+    width: 100%;
   }
 }
