--- a/src/app/HomeSections/Testimonials/Testimonials.module.css
+++ b/src/app/HomeSections/Testimonials/Testimonials.module.css
@@ -1,18 +1,19 @@
 .container {
   width: 100%;
-  padding: 2rem 6rem;
+  padding: 10rem 6rem 12rem;
 }
 .inner {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 2rem;
-  padding: 4rem 2rem;
+  padding: 0rem 2rem;
 }
 
 .heading {
   color: var(--color-black);
   margin-bottom: 3rem;
+  font-weight: 600;
   transform: translateY(100%);
   opacity: 0;
   text-align: center;
@@ -49,7 +50,7 @@
 
 @media only screen and (max-width: 640px) {
   .container {
-    padding: 2rem 1rem;
+    padding: 6rem 0 9rem;
   }
   .inner {
     padding: 0;
