--- a/src/app/HomeSections/Tours/Tours.module.css
+++ b/src/app/HomeSections/Tours/Tours.module.css
@@ -1,6 +1,7 @@
 .container {
   height: 100vh;
   width: 100vw;
+  padding: 10rem 0 12rem;
 }
 
 .text {
@@ -8,6 +9,7 @@
 }
 .text h1 {
   color: var(--color-black);
+  font-weight: 600;
 }
 .nav {
   display: flex;
@@ -41,6 +43,9 @@
   color: white;
 }
 @media only screen and (max-width: 640px) {
+  .container {
+    padding: 6rem 0 9rem;
+  }
   .nav {
     gap: 0.5rem;
   }
