--- a/src/app/HomeSections/Tours/Tours.module.css
+++ b/src/app/HomeSections/Tours/Tours.module.css
@@ -4,12 +4,26 @@
   padding: 10rem 0 12rem;
 }
 
-.text {
-  text-align: center;
-}
-.text h1 {
-  color: var(--color-black);
+.title {
+  margin-bottom: 3rem;
   font-weight: 600;
+  text-align: center;
+  line-height: 1.1;
+}
+.subTitle {
+  max-width: 65ch;
+  margin: 0 auto 4rem;
+  font-size: clamp(1rem, 2.5vw, 1.25rem);
+  text-align: center;
+  padding: 0 1rem;
+  line-height: 1.5;
+}
+.subTitle span {
+  line-height: 1.5;
+}
+.title,
+.subTitle {
+  color: var(--color-black);
 }
 .nav {
   display: flex;
@@ -52,5 +66,8 @@
   .navItem {
     font-size: 0.8rem;
     padding: 0.4rem 0.6rem;
+  }
+  .title {
+    margin-bottom: 3rem;
   }
 }
