--- a/src/app/HomeSections/BoatSection/BoatSection.module.css
+++ b/src/app/HomeSections/BoatSection/BoatSection.module.css
@@ -8,16 +8,25 @@
 }
 
 .title {
-  color: var(--color-white);
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
   font-weight: 600;
+  text-align: center;
+  line-height: 1.1;
 }
-
 .subTitle {
-  color: var(--color-white);
   max-width: 65ch;
   margin: 0 auto 4rem;
   font-size: clamp(1rem, 2.5vw, 1.25rem);
+  text-align: center;
+  padding: 0 1rem;
+  line-height: 1.5;
+}
+.subTitle span {
+  line-height: 1.5;
+}
+.title,
+.subTitle {
+  color: var(--color-white);
 }
 
 .navigation {
@@ -78,5 +87,10 @@
   }
   .swiper {
     padding: 0 1rem;
+  }
+}
+@media only screen and (max-width: 640px) {
+  .title {
+    margin-bottom: 3rem;
   }
 }
