--- a/src/app/HomeSections/Testimonials/Testimonials.module.css
+++ b/src/app/HomeSections/Testimonials/Testimonials.module.css
@@ -10,13 +10,26 @@
   padding: 0rem 2rem;
 }
 
-.heading {
-  color: var(--color-black);
+.title {
   margin-bottom: 3rem;
   font-weight: 600;
-  transform: translateY(100%);
-  opacity: 0;
   text-align: center;
+  line-height: 1.1;
+}
+.subTitle {
+  max-width: 65ch;
+  margin: 0 auto 4rem;
+  font-size: clamp(1rem, 2.5vw, 1.25rem);
+  text-align: center;
+  padding: 0 1rem;
+  line-height: 1.5;
+}
+.subTitle span {
+  line-height: 1.5;
+}
+.title,
+.subTitle {
+  color: var(--color-black);
 }
 
 /* swipeable grid + snap */
@@ -58,5 +71,8 @@
   .testimonials {
     gap: 1rem;
     /* height: 700px; */
+  }
+  .title {
+    margin-bottom: 3rem;
   }
 }
