--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,14 +1,15 @@
-.largeBg {
-  /* background-image: url("/assets/tall-bg.png");
-  background-size: cover;
-  background-position: center; */
+.gradient {
   background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(198, 214, 215, 1) 100%);
 }
 
 .largeImage {
-  height: 140vh;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   position: relative;
+}
+
+.image {
+  object-fit: cover;
 }
 
 @media (max-width: 768px) {
