--- a/src/app/Components/Footer/Footer.module.css
+++ b/src/app/Components/Footer/Footer.module.css
@@ -31,16 +31,16 @@
   color: var(--color-white);
 }
 
-.logo h1 {
-  font-size: 1.5rem;
+.logo {
+  margin-bottom: 2rem;
 }
 
 @media only screen and (max-width: 640px) {
   .container {
-    height: 300px;
+    height: 340px;
   }
   .inner {
-    height: 300px;
+    height: 340px;
     flex-direction: column;
     padding: 1rem 1rem 2rem;
     align-items: flex-start;
