--- a/src/app/HomeSections/BoatSection/BoatSection.module.css
+++ b/src/app/HomeSections/BoatSection/BoatSection.module.css
@@ -1,96 +1,47 @@
-/* ---------- layout & copy ---------- */
-.container {
+.section {
+  height: 100vh;
+  background: var(--color-black);
   position: relative;
-  width: 100vw;
-  padding: 10rem 0 12rem;
-  background: #131211;
+  overflow: hidden;
+}
+
+.imageWrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 90%;
+  max-width: 2550px;
+  height: 60%;
+  border-radius: 100vh;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
+}
+
+.image {
+  object-fit: cover;
+  z-index: 1;
+}
+
+.content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) translateY(150%);
   text-align: center;
+  color: white;
+  opacity: 0;
+  z-index: 2;
 }
 
 .title {
-  margin-bottom: 3rem;
   font-weight: 600;
-  text-align: center;
-  line-height: 1.1;
+  margin-bottom: 1rem;
 }
+
 .subTitle {
-  max-width: 65ch;
-  margin: 0 auto 4rem;
-  font-size: clamp(1rem, 2.5vw, 1.25rem);
-  text-align: center;
-  padding: 0 1rem;
-  line-height: 1.5;
-}
-.subTitle span {
-  line-height: 1.5;
-}
-.title,
-.subTitle {
-  color: var(--color-white);
-}
-
-.navigation {
-  position: absolute;
-  bottom: 3rem;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  gap: 1.5rem;
-  background-color: #fff;
-  border-radius: 9999px;
-  padding: 4px;
-}
-
-/* ---------- arrow buttons ---------- */
-.arrow {
-  --size: 42px;
-  inline-size: var(--size);
-  block-size: var(--size);
-  border-radius: 50%;
-  background: #000;
-  box-shadow: 0 0 10px rgb(0 0 0 / 0.25);
-  border: none;
-  cursor: pointer;
-  display: grid; /* centres inner SVG */
-  place-items: center;
-  transition: transform 0.2s ease;
-  color: #fff; /* SVG uses currentColor */
-}
-
-.arrow:hover {
-  transform: scale(1.1);
-}
-.arrow:active {
-  transform: scale(0.95);
-}
-
-.arrow svg {
-  width: 40%;
-  height: 40%;
-  fill: currentColor;
-}
-
-.left svg {
-  transform: rotate(180deg);
-}
-
-@media (min-width: 768px) {
-  .arrow {
-    margin: 0;
-    z-index: 9;
-  }
-}
-
-@media (max-width: 768px) {
-  .container {
-    padding: 6rem 0 9rem;
-  }
-  .swiper {
-    padding: 0 1rem;
-  }
-}
-@media only screen and (max-width: 640px) {
-  .title {
-    margin-bottom: 3rem;
-  }
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
 }
