--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,7 +57,7 @@ body {
   font-family: var(--font-inter), sans-serif;
   font-size: var(--fs-p);
   background-color: var(--color-white);
-  color: var(--color-text-lite);
+  color: var(--color-text-dark);
   line-height: 1.6;
   font-weight: 400;
 }
